added materialize css

--- a/web-service/templates/index.html
+++ b/web-service/templates/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">    
     <meta charset="UTF-8">
     <title>Explore BhavCopy</title>
 </head>
 <body>
-
-    <form method="get" action="get_bhav_copy">
-        <button type="submit">Download Latest Bhavcopy</button>
-    </form>
+     <div class="center-align">
+        <form method="get" action="get_bhav_copy">
+            <button class="btn waves-effect waves-light" type="submit">
+                <i class="material-icons left">file_download</i>Download Latest Bhavcopy</button>
+        </form>
+    </div>
 </body>
 </html>
