--- a/web-service/templates/result.html
+++ b/web-service/templates/result.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<p>
-    {{ result }}
-</p>
+    <div class="container">
+        <table class="centered highlight responsive-table">
+                <thead>
+                    <tr>
+                        <!-- <th>S.No</th> -->
+                        <th>Scrip Code</th>
+                        <th>Scrip Name</th>
+                        <th>Open</th>
+                        <th>High</th>
+                        <th>Low</th>
+                        <th>Close</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        {% for _, value in result.items() %}
+                        <td>{{ value }}</td>
+                        {% endfor %}
+                    </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
