--- a/web-service/templates/display.html
+++ b/web-service/templates/display.html
@@ -1,49 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="/static/css/main.css">
+    <title>Explore BhavCopy</title>
 </head>
+
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <form action="get_scrip_details" method="POST">
-                <div class="input-field">
-                    <input id="scrip_name" name="scrip_name" type="search" placeholder="Scrip Name">
-                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                    <i class="material-icons">close</i>
+    <header>
+        <nav class="navbar navbar-expand-lg sticky-top h-25 align-items-center">
+            <div class="container-fluid">
+                <a class="blue-color navbar-brand" href="/">Explore Bhav Copy</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active px-3">
+                            <a class="blue-color nav-link" href="https://www.bseindia.com/">BSE<span
+                                    class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active px-3">
+                            <a class="blue-color nav-link" href="https://www.nseindia.com/">NSE</a>
+                        </li>
+                    </ul>
                 </div>
-            </form>
+                <form class="form-inline my-2 my-lg-0" method="POST" action="get_scrip_details">
+                    <input id="scrip_name" name="scrip_name" class="form-control mr-sm-2" type="search" placeholder="Scrip Name" aria-label="Scrip Name">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+    {% if flag == 0 %}
+        <div class="alert alert-success mt-3" role="alert">
+            {{ text }}
         </div>
-    </nav>
-    <p>{{ text }}</p>
-    <br />
+    {% else %}
+        <div class="alert alert-danger mt-3" role="alert">
+            {{ text }}
+        </div>
+    {% endif %}
+        <br />
+    
     <div class="container">
-        <table class="centered highlight responsive-table">
-            <thead>
+        <table class="table table-striped">
+            <thead class="thead-dark">
                 <tr>
-                    <!-- <th>S.No</th> -->
-                    <th>Scrip Code</th>
-                    <th>Scrip Name</th>
-                    <th>Open</th>
-                    <th>High</th>
-                    <th>Low</th>
-                    <th>Close</th>
+                    <th scope="col">#</th>
+                    <th scope="col">Scrip Code</th>
+                    <th scope="col">Scrip Name</th>
+                    <th scope="col">Open</th>
+                    <th scope="col">High</th>
+                    <th scope="col">Low</th>
+                    <th scope="col">Close</th>
                 </tr>
             </thead>
             <tbody>
                 {% for item in top_entries %}
                 <tr>
-                    {% for _, value in item.items() %}
-                    <td>{{ value }}</td>
-                    {% endfor %}
+                    <th scope="row">{{ loop.index }}</th>
+                    <td>{{ item['Scrip Code'] }}</td>
+                    <td>{{ item['Scrip Name'] }}</td>
+                    <td>{{ item['Open'] }}</td>
+                    <td>{{ item['High'] }}</td>
+                    <td>{{ item['Low'] }}</td>
+                    <td>{{ item['Close'] }}</td>
                 </tr>
-            {% endfor %}
-        </tbody>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
 </body>
+
 </html>
