--- a/web-service/templates/index.html
+++ b/web-service/templates/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <nav class="navbar navbar-expand-lg sticky-top shadow-lg p-3 mb-5 bg-white rounded">
+        <nav class="navbar navbar-expand-lg sticky-top shadow-lg p-3 bg-white rounded">
             <div class="container-fluid">
                 <a class="blue-color navbar-brand" href="/">Explore Bhav Copy</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -40,37 +40,25 @@
                         </li>
                     </ul>
                 </div>
+                <form id="search_box" class="form-inline my-2 my-lg-0 d-none">
+                    <input id="scrip_name" class="form-control mr-sm-2" type="search" placeholder="Scrip Name"
+                        aria-label="Scrip Name">
+                    <button id="search_button" class="btn btn-outline-success my-2 my-sm-0"
+                        type="submit">Search</button>
+                </form>
             </div>
         </nav>
     </header>
-    <!-- DownloadButton -->
-    <div id="spinner_1" class="spinner-grow justify-content-center" style="width: 3rem; height: 3rem;" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
-
-    <main id="button-main" class="container h-100">
+    <!-- Download button -->
+    <main id="button-main" class="container">
         <div class="row h-100 align-items-center justify-content-center">
-            <button id="button-1" class="btn btn-primary"><i class="fas fa-cloud-download-alt"></i> Download Bhav
+            <button id="button-bhavcopy" class="btn btn-primary"><i class="fas fa-cloud-download-alt"></i> Download Bhav
                 Copy</button>
         </div>
     </main>
-    <!-- Spinner -->
-    <!-- <div id="spinner_1" class="spinner-grow d-none" style="width: 3rem; height: 3rem;" role="status">
-        <span class="sr-only">Loading...</span>
-    </div> -->
-    <!-- Table -->
-    <div id="table-1" class="container d-none">
-        <!-- {% if flag == 0 %}
-        <div class="alert alert-success mt-5 text-center" role="alert">
-            {{ text }}
-        </div>
-        {% else %}
-        <div class="alert alert-danger mt-5 text-center" role="alert">
-            {{ text }}
-        </div>
-        {% endif %} -->
-        <br />
-        <table id="scrip_table" class="table table-bordered table-hover mt-2 h-100 mb-5 pb-5">
+    <!-- Table 10 results from redis -->
+    <div id="table-content" class="container d-none">
+        <table id="scrip_table" class="table table-bordered table-hover mt-2">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">#</th>
@@ -86,9 +74,27 @@
             </tbody>
         </table>
     </div>
+    <!-- Search Query Table -->
+    <div id="table-search" class="container d-none">
+        <table id="result-table" class="table table-bordered table-hover mt-2">
+            <thead class="thead-dark">
+                <tr>
+                    <!-- <th scope="col">#</th> -->
+                    <th scope="col">Scrip Code</th>
+                    <th scope="col">Scrip Name</th>
+                    <th scope="col">Open</th>
+                    <th scope="col">High</th>
+                    <th scope="col">Low</th>
+                    <th scope="col">Close</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
     <!-- Footer -->
     <nav id="footer" class="navbar-custom-footer navbar fixed-bottom">
-        <div class="container-fluid text-center">
+        <div class="container-fluid text-center mt-3">
             <ul class="list-inline mx-auto">
                 <li class="list-inline-item"><a target="_blank" href="https://twitter.com/gera_anshul"><i
                             class="fab fa-twitter fa-lg"></i></a></li>
@@ -100,20 +106,19 @@
         </div>
     </nav>
 
-    <!-- <script src="https://kit.fontawesome.com/effc465da7.js"></script> -->
+    <script src="https://kit.fontawesome.com/effc465da7.js"></script>
 
     <script>
         $(document).ready(function () {
-            $('#button-1').click(function () {
-                // $(this).hide();
+            // Handle download bhavcopy
+            $('#button-bhavcopy').click(function () {
                 $('#button-main').addClass('d-none');
-                // $('#spinner_1').removeClass('d-none');
                 $.getJSON('/get_bhav_copy',
                     function (data) {
                         var scrip_data = '';
                         var count = 1
                         $.each(data, function (key, value) {
-                            scrip_data += '<tr>'
+                            scrip_data += '<tr>';
                             scrip_data += '<th scope="row">' + count + '</th>';
                             scrip_data += '<td>' + value['Scrip Code'] + '</td>';
                             scrip_data += '<td>' + value['Scrip Name'] + '</td>';
@@ -124,12 +129,39 @@
                             scrip_data += '</tr>';
                             count += 1;
                         });
-                        $('#scrip_table').append(scrip_data)
-                        console.log(data)
+                        $('#scrip_table').append(scrip_data);
+                        console.log(data);
                     }
-                )
-                // $('#spinner_1').addClass('d-none');
-                $('#table-1').removeClass('d-none');
+                );
+                // Show table content
+                $('#table-content').removeClass('d-none');
+                // Show search box
+                $('#search_box').removeClass('d-none');
+            });
+            $(function () {
+                $('#search_button').bind('click', function () {
+                    $('#table-content').addClass('d-none');
+                    $('#table-search').removeClass('d-none');
+                    $('#scrip-search-result').remove();
+                    $.getJSON('/get_scrip_details', {
+                        scrip_name: $('#scrip_name').val(),
+                    }, function (data) {
+                        var scrip_details = '';
+                        $.each(data, function (key, value) {
+                            scrip_details += '<tr id="scrip-search-result">';
+                            scrip_details += '<td>' + value['Scrip Code'] + '</td>';
+                            scrip_details += '<td>' + value['Scrip Name'] + '</td>';
+                            scrip_details += '<td>' + value['Open'] + '</td>';
+                            scrip_details += '<td>' + value['High'] + '</td>';
+                            scrip_details += '<td>' + value['Low'] + '</td>';
+                            scrip_details += '<td>' + value['Close'] + '</td>';
+                            scrip_details += '</tr>';
+                        });
+                        $('#result-table').append(scrip_details);
+                        // alert(data);
+                    });
+                    return false;
+                });
             });
         });
     </script>
