--- a/web-service/templates/css/main.css
+++ b/web-service/templates/css/main.css
@@ -3,7 +3,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   font-family: "open sans", arial;
   font-size: 16px;
@@ -16,19 +17,24 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 header {
-  min-height: 40px;
+  max-height: 60px;
 }
 
-main {
+div#button-main {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   overflow: auto;
+}
+
+table#scrip-table {
+  overflow: auto;
+  margin-bottom: 80px;
 }
 
 .blue-color {
@@ -46,7 +52,9 @@ main {
   background-color: #222;
 }
 
-.fa-twitter, .fa-github, .fa-linkedin {
+.fa-twitter,
+.fa-github,
+.fa-linkedin {
   color: #CCCCCC;
 }
 
@@ -59,7 +67,17 @@ main {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
+
+div#loader {
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url("Loader.gif") center no-repeat #fff;
+}
+
 /*# sourceMappingURL=main.css.map */
