--- a/web-service/templates/css/main.scss
+++ b/web-service/templates/css/main.scss
@@ -2,57 +2,82 @@
     margin: 0;
     padding: 0
 }
-html, body{
+
+html,
+body {
     height: 100%;
     font-family: "open sans", arial;
     font-size: 16px;
     font-weight: 400;
 }
-body{
+
+body {
     display: flex;
     flex-direction: column;
 }
-header{
+
+header {
     max-height: 60px;
 }
+
 // main{
 //     flex-grow: 1;
 //     overflow: auto;
 // }
-div#button-main{
+div#button-main {
     flex-grow: 1;
     overflow: auto;
 }
+
 // .container{
 //     height:calc(100% - 138px)
 // }
 // #table-1{
 //     overflow-y: scroll;
 // }
-table#scrip-table{
+table#scrip-table {
     overflow: auto;
     margin-bottom: 80px;
 }
-.blue-color{
+
+.blue-color {
     color: #387ED1;
 }
-.btn-primary{
+
+.btn-primary {
     color: #fff;
-    background-color:#387ED1;
-    border-color:#fff;
+    background-color: #387ED1;
+    border-color: #fff;
 }
+
 .navbar-custom-footer {
     height: 60px;
     background-color: #222;
     // color: #CCCCCC;
-  }
-.fa-twitter, .fa-github, .fa-linkedin{
+}
+
+.fa-twitter,
+.fa-github,
+.fa-linkedin {
     color: #CCCCCC;
 }
+
 .vertical-center {
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh; /* These two lines are counted as one :-)       */
-  
+    min-height: 100%;
+    /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh;
+    /* These two lines are counted as one :-)       */
+
     display: flex;
     align-items: center;
-  }
+}
+
+div#loader {
+    // position: fixed;
+    // left: 0px;
+    // top: 0px;
+    // width: 100%;
+    // height: 100%;
+    z-index: 9999;
+    background: url('Loader.gif') center no-repeat #fff;
+}
