--- a/web-service/templates/css/main.css
+++ b/web-service/templates/css/main.css
@@ -17,8 +17,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 header {
@@ -27,8 +27,8 @@ header {
 
 div#button-main {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   overflow: auto;
 }
 
@@ -67,17 +67,27 @@ table#scrip-table {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-div#loader {
+.se-pre-con {
+  position: fixed;
   left: 0px;
   top: 0px;
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url("Loader.gif") center no-repeat #fff;
+  background: url(../css/Loader.gif) center no-repeat #fff;
 }
 
+#table-loading {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(../css/Loader.gif) center no-repeat #fff;
+}
 /*# sourceMappingURL=main.css.map */
