--- a/web-service/templates/css/main.scss
+++ b/web-service/templates/css/main.scss
@@ -72,12 +72,22 @@ table#scrip-table {
     align-items: center;
 }
 
-div#loader {
-    // position: fixed;
-    // left: 0px;
-    // top: 0px;
-    // width: 100%;
-    // height: 100%;
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
     z-index: 9999;
-    background: url('Loader.gif') center no-repeat #fff;
+    background: url(../css/Loader.gif) center no-repeat #fff;
+}
+
+#table-loading {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../css/Loader.gif) center no-repeat #fff;
 }
