--- a/web-service/templates/index.html
+++ b/web-service/templates/index.html
@@ -34,10 +34,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active px-3">
-                        <a class="blue-color nav-link" href="https://www.bseindia.com/">BSE</a>
+                        <a class="blue-color nav-link" target="_blank" href="https://www.bseindia.com/">BSE</a>
                     </li>
                     <li class="nav-item active px-3">
-                        <a class="blue-color nav-link" href="https://www.nseindia.com/">NSE</a>
+                        <a class="blue-color nav-link" target="_blank" href="https://www.nseindia.com/">NSE</a>
                     </li>
                 </ul>
             </div>
